# debouncer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
debouncer/: __init__.py  app.py  cli.py  config.py  dispatch.py  router.py  state.py  store.py
funnel/: cli.py  config.py  dispatch.py  schema.py  store.py
scripts/: release.sh
tests/: conftest.py  dispatch_test.py  router_test.py
web/: Makefile  index.html  package.json
web/src/: App.tsx  api.ts  main.tsx
web/src/components/: Endpoints.tsx  Header.tsx
